--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "language-matching-service",
+  "name": "supermatch",
   "version": "1.0.0",
   "description": "WhatsApp-based language matching service",
   "main": "src/index.js",
@@ -9,7 +9,10 @@
     "start": "node src/index.js",
     "test": "node --test",
     "test:webhook": "node scripts/test-webhook.js",
-    "test:matching": "node scripts/test-matching.js"
+    "test:matching": "node scripts/test-matching.js",
+    "test:chatbot": "node scripts/test-chatbot-flow.js",
+    "test:scheduler": "node scripts/test-scheduler.js",
+    "test:all": "npm run test:webhook && npm run test:matching && npm run test:chatbot && npm run test:scheduler"
   },
   "keywords": [
     "language-matching",
@@ -22,7 +25,7 @@
     "express": "^4.18.2",
     "dotenv": "^16.3.1",
     "twilio": "^4.19.0",
-    "openai": "^4.20.1",
+    "@google/generative-ai": "^0.21.0",
     "googleapis": "^126.0.1",
     "stripe": "^14.7.0",
     "@supabase/supabase-js": "^2.38.4",
